app/base/apps/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-all
  namespace: default
  annotations:
    configmap.reloader.stakater.com/reload: "reload-trigger"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-all
  template:
    metadata:
      labels:
        app: api-all
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: api-all
        image: sportdeets.azurecr.io/sportsdataapi:1347
        imagePullPolicy: Always
        command: ["dotnet"]
        args: ["SportsData.Api.dll"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 1Gi
            cpu: "2"
          requests:
            memory: 512Mi
            cpu: "0.5"
