app/base/apps/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: api-all
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
  type: NodePort
---
# https://stackoverflow.com/questions/63344920/access-external-database-from-kubernetes
# https://stackoverflow.com/questions/65123401/how-to-access-hosts-localhost-from-inside-kubernetes-cluster
apiVersion: v1
kind: Service
metadata:
  name: api-svc-db
  namespace: default
spec:
  clusterIP: None
  ports:
  - protocol: TCP
    name: api-svc-db
    port: 1433
    targetPort: 1433
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: api-svc-db
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - port: 1433
        name: api-svc-db
