app/base/apps/api/api-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-internal-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api-int.sportdeets.com`) || Host(`67.7.88.82`)
      kind: Rule
      services:
        - name: api-service
          port: 8080
